--- a/css/styles.css
+++ b/css/styles.css
@@ -673,7 +673,8 @@ gap: 332px;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
-    height: 584px;
+    min-height: 584px;
+    border-radius: 4px;
     opacity: 1;
     pointer-events: all;
     background-color: var(--modal-background);
@@ -681,7 +682,7 @@ gap: 332px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hidde {
+.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -718,5 +719,22 @@ gap: 332px;
 .closebutton:focus {
     background-color: var(--pressed-state);
     border: none;
+
+}
+
+.navigation:nth-child(1) {
+    position: relative;
+    }
+
+.navigation:nth-child(1)::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: var(--pressed-state);
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
+
 }
