--- a/css/styles.css
+++ b/css/styles.css
@@ -551,8 +551,7 @@ gap: 332px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -624,8 +623,7 @@ gap: 332px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-infoo:hover,
@@ -721,10 +719,6 @@ gap: 332px;
     border: none;
 
 }
-
-.navigation:nth-child(1) {
-    position: relative;
-    }
 
 .navigation:nth-child(1)::after {
     content: '';
