--- a/css/styles.css
+++ b/css/styles.css
@@ -680,7 +680,7 @@ gap: 332px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hidden {
+.is-hidde {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
