--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,7 @@ width: calc((100% - 72px) / 4);
 
 .lipic {
     display: block;
-    position: relative;
-    overflow: hidden;
+    
 }
 
 .char {
@@ -643,8 +642,8 @@ gap: 332px;
 .overlay {
     font-family: Roboto;
     font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--light);
     position: absolute;
     top: 0;
@@ -657,12 +656,17 @@ gap: 332px;
     padding-top: 40px;
     max-width: 360px;
     max-height: 300px;
-    translate: 0 100%;
-    transition: translate 400ms;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.container-linkoverlay {
+    position: relative;
+    overflow: hidden;
 }
 
-.linkoverlay:hover .overlay {
+.container-linkoverlay:hover .overlay {
     translate: 0;
+    
 }
 
 .modal-window {
@@ -680,7 +684,7 @@ gap: 332px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hidde {
+.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -705,7 +709,7 @@ gap: 332px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     background-color: var(--accent);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
