--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,8 @@ width: calc((100% - 72px) / 4);
 
 .lipic {
     display: block;
-    
+    position: relative;
+    overflow: hidden;
 }
 
 .char {
@@ -319,6 +320,21 @@ footer {
     padding: 24px 0;
 }
 
+.navigation-bar-transition {
+    position: relative;
+    color: var(--pressed-state);
+}
+
+.navigation-bar-transition:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: var(--pressed-state);
+    border-radius: 2px;
+    
+}
 
 .navigation:hover,
 .navigation:focus {
@@ -642,8 +658,8 @@ gap: 332px;
 .overlay {
     font-family: Roboto;
     font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    line-height: 24px;
+    letter-spacing: 0.32px;
     color: var(--light);
     position: absolute;
     top: 0;
@@ -656,17 +672,12 @@ gap: 332px;
     padding-top: 40px;
     max-width: 360px;
     max-height: 300px;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.container-linkoverlay {
-    position: relative;
-    overflow: hidden;
+    translate: 0 100%;
+    transition: translate 400ms;
 }
 
-.container-linkoverlay:hover .overlay {
+.linkoverlay:hover .overlay {
     translate: 0;
-    
 }
 
 .modal-window {
@@ -721,18 +732,5 @@ gap: 332px;
 .closebutton:focus {
     background-color: var(--pressed-state);
     border: none;
-
-}
-
-.navigation:nth-child(1)::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: var(--pressed-state);
-    border-radius: 2px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 
 }
