--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ footer {
     display: flex;
     align-items: center;
     gap: 40px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -323,17 +324,18 @@ footer {
 .navigation-bar-transition {
     position: relative;
     color: var(--pressed-state);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-bar-transition:after {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     bottom: -1px;
     height: 4px;
     background-color: var(--pressed-state);
     border-radius: 2px;
-    
+
 }
 
 .navigation:hover,
