--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ footer {
     display: flex;
     align-items: center;
     gap: 40px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -334,10 +334,12 @@ footer {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -1px;
+    bottom: -10px;
     height: 4px;
+    width: 100%;
     background-color: var(--pressed-state);
     border-radius: 2px;
+    display: block;
 
 }
 
