--- a/css/styles.css
+++ b/css/styles.css
@@ -321,11 +321,12 @@ footer {
 .navigation {
     color: var(--dark);
     letter-spacing: 0.02em;
-    padding: 24px 0;
+    display: inline-block;
 }
 
 .navigation-bar-transition {
     position: relative;
+    display: inline-block;
     color: var(--pressed-state);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -339,7 +340,6 @@ footer {
     width: 100%;
     background-color: var(--pressed-state);
     border-radius: 2px;
-    display: block;
 }
 
 .navigation:hover,
@@ -676,12 +676,12 @@ gap: 332px;
     padding: 40px 32px;
     max-width: 360px;
     max-height: 300px;
-    translate: 0 100%;
-    transition: translate 400ms;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .linkoverlay:hover .overlay {
-    translate: 0;
+    transform: translateY(0%);
 }
 
 .modal-window {
