--- a/css/styles.css
+++ b/css/styles.css
@@ -681,7 +681,8 @@ gap: 332px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.linkoverlay:hover .overlay {
+.linkoverlay:hover .overlay,
+.linkoverlay:focus .overlay {
     transform: translateY(0%);
 }
 
