--- a/css/styles.css
+++ b/css/styles.css
@@ -678,13 +678,15 @@ gap: 332px;
     max-width: 360px;
     max-height: 300px;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
-.linkoverlay:hover .overlay,
-.linkoverlay:focus .overlay {
+.link.lipic:hover .overlay,
+.link.lipic:focus .overlay {
     transform: translateY(0%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .modal-window {
     position: absolute;
@@ -745,8 +747,8 @@ gap: 332px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.link-lipic:hover,
-.link-lipic:focus {
+.link.lipic:hover,
+.link.lipic:focus {
     transform: translateY(0%);
 }
 
