--- a/css/styles.css
+++ b/css/styles.css
@@ -325,14 +325,14 @@ footer {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation.bar-transition {
+.navigation-bar-transition {
     position: relative;
     display: inline-block;
     color: var(--pressed-state);
     
 }
 
-.navigation.bar-transition:after {
+.navigation-bar-transition:after {
     content: '';
     position: absolute;
     left: 0;
