--- a/css/styles.css
+++ b/css/styles.css
@@ -678,6 +678,7 @@ gap: 332px;
     max-width: 360px;
     max-height: 300px;
     transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
