--- a/css/styles.css
+++ b/css/styles.css
@@ -685,7 +685,7 @@ gap: 332px;
 .link.lipic:hover .overlay,
 .link.lipic:focus .overlay {
     transform: translateY(0%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
