--- a/css/styles.css
+++ b/css/styles.css
@@ -350,8 +350,7 @@ footer {
 
 .link {
     text-decoration: none;
-    transition: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .picpar {
@@ -469,12 +468,12 @@ img {
 }
 
 .member {
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2;
-letter-spacing: 0.02em;
-text-align: center;
-margin-bottom: 8px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .memberposition {
@@ -491,8 +490,8 @@ margin-bottom: 8px;
 }
 
 .headcontainer {
-display: flex;
-gap: 332px;
+    display: flex;
+    gap: 332px;
 }
 
 .appcontainer {
